--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.0",
     "tailwind-merge": "^3.4.0",
