--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run dev -w @project-ida/web\" \"npm run dev -w gateway-service\" \"npm run dev -w auth-service\" \"npm run dev -w tenant-service\" \"npm run dev -w upload-service\" \"npm run dev -w parser-service\" \"npm run dev -w eda-service\" \"npm run dev -w job-orchestrator-service\" \"npm run dev -w billing-service\"",
+    "dev": "concurrently \"npm run dev -w @project-ida/web\" \"npm run dev -w gateway-service\" \"npm run dev -w auth-service\" \"npm run dev -w tenant-service\" \"npm run dev -w upload-service\" \"npm run dev -w parser-service\" \"npm run dev -w eda-service\" \"npm run dev -w job-orchestrator-service\" \"npm run dev -w billing-service\" \"npm run dev -w ai-service\"",
     "db:push": "prisma db push --schema=packages/db/prisma/schema.prisma",
     "generate": "prisma generate --schema=packages/db/prisma/schema.prisma"
   },
