--- a/services/eda-service/package.json
+++ b/services/eda-service/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "express": "^4.18.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "@project-ida/logger": "*",
         "@project-ida/db": "*",
@@ -18,6 +19,7 @@
     "devDependencies": {
         "typescript": "^5.0.0",
         "@types/express": "^4.17.17",
+        "@types/cors": "^2.8.17",
         "@types/node": "^20.0.0"
     }
 }
