--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,10 @@
         "axios": "^1.6.2",
         "@google/generative-ai": "^0.1.3",
         "openai": "^4.20.1",
-        "stripe": "^14.7.0"
+        "stripe": "^14.7.0",
+        "@project-ida/db": "*",
+        "@project-ida/auth": "*",
+        "@project-ida/logger": "*"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
