--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": [
     "apps/*",
     "services/*",
-    "packages/*"
+    "packages/*",
+    "api"
   ],
   "main": "index.js",
   "scripts": {
