--- a/api/package.json
+++ b/api/package.json
@@ -10,34 +10,38 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@prisma/client": "^5.7.0",
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "morgan": "^1.10.0",
-        "dotenv": "^16.3.1",
-        "jsonwebtoken": "^9.0.2",
-        "bcrypt": "^5.1.1",
-        "zod": "^3.22.4",
-        "multer": "^1.4.5-lts.1",
-        "axios": "^1.6.2",
+        "@aws-sdk/client-s3": "^3.984.0",
+        "@aws-sdk/s3-request-presigner": "^3.984.0",
         "@google/generative-ai": "^0.1.3",
+        "@prisma/client": "^5.7.0",
+        "@project-ida/auth": "*",
+        "@project-ida/db": "*",
+        "@project-ida/logger": "*",
+        "axios": "^1.6.2",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "openai": "^4.20.1",
         "stripe": "^14.7.0",
-        "@project-ida/db": "*",
-        "@project-ida/auth": "*",
-        "@project-ida/logger": "*"
+        "uuid": "^13.0.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/cors": "^2.8.17",
-        "@types/morgan": "^1.9.9",
-        "@types/node": "^20.10.5",
         "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.11",
-        "typescript": "^5.3.3",
+        "@types/node": "^20.10.5",
+        "@types/uuid": "^10.0.0",
+        "prisma": "^5.7.0",
         "tsx": "^4.7.0",
-        "prisma": "^5.7.0"
+        "typescript": "^5.3.3"
     }
 }
