--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.12.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5",
