--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
         "nodemailer": "^8.0.0",
         "openai": "^4.20.1",
         "papaparse": "^5.5.3",
+        "resend": "^6.9.1",
         "stripe": "^14.7.0",
         "uuid": "^13.0.0",
         "xlsx": "^0.18.5",
