--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
+    "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
