--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run dev -w @project-ida/web\" \"npm run dev -w gateway-service\" \"npm run dev -w auth-service\" \"npm run dev -w tenant-service\" \"npm run dev -w upload-service\" \"npm run dev -w parser-service\" \"npm run dev -w eda-service\" \"npm run dev -w job-orchestrator-service\" \"npm run dev -w billing-service\" \"npm run dev -w ai-service\" \"npm run dev -w @project-ida/admin-service\"",
-    "db:push": "prisma db push --schema=packages/db/prisma/schema.prisma",
-    "generate": "prisma generate --schema=packages/db/prisma/schema.prisma",
+    "db:push": "npx prisma db push --schema=packages/db/prisma/schema.prisma",
+    "generate": "npx prisma generate --schema=packages/db/prisma/schema.prisma",
     "build:packages": "npm run build -w @project-ida/logger && npm run build -w @project-ida/db && npm run build -w @project-ida/auth",
     "build:web": "npm run build -w @project-ida/web",
     "build:api": "npm run build -w @project-ida/unified-api && node scripts/collect-assets.js",
