--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,9 +9,9 @@
         "generate": "prisma generate"
     },
     "dependencies": {
-        "@prisma/client": "^5.0.0"
+        "@prisma/client": "5.22.0"
     },
     "devDependencies": {
-        "prisma": "^5.0.0"
+        "prisma": "5.22.0"
     }
 }
