--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -4,8 +4,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "npx tsc",
-        "dev": "npx tsc -w"
+        "build": "tsc",
+        "dev": "tsc -w"
     },
     "dependencies": {
         "pino": "^8.0.0",
