--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,8 +4,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc --watch"
+        "build": "npx --package typescript tsc",
+        "dev": "npx --package typescript tsc --watch"
     },
     "dependencies": {
         "jsonwebtoken": "^9.0.2",
