--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
-  "dependencies": {
-    "@radix-ui/react-progress": "^1.1.8"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=20.0.0"
   }
