--- a/services/admin-service/package.json
+++ b/services/admin-service/package.json
@@ -14,13 +14,13 @@
         "@project-ida/db": "*",
         "@project-ida/logger": "*",
         "@project-ida/auth": "*",
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
         "@types/cors": "^2.8.13",
-        "@types/bcrypt": "^5.0.0",
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20.4.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.1.6"
