--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -9,7 +9,7 @@
     },
     "dependencies": {
         "express": "^4.18.2",
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "jsonwebtoken": "^9.0.2",
         "dotenv": "^16.3.1",
         "@project-ida/logger": "*",
@@ -19,7 +19,7 @@
     "devDependencies": {
         "typescript": "^5.0.0",
         "@types/express": "^4.17.17",
-        "@types/bcrypt": "^5.0.0",
+        "@types/bcryptjs": "^2.4.6",
         "@types/jsonwebtoken": "^9.0.3",
         "@types/node": "^20.0.0"
     }
